name:                data-cache
version:             0.1.0
synopsis:            Caching layer
description:         Please see README.md
homepage:            http://github.com/Feeniks/data-cache
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Cache
  build-depends:       base >= 4.7 && < 5 
                     , lens >= 4.7.0.1 
                     , time >= 1.4.2 
                     , containers >= 0.5.5.1 
                     , stm >= 2.4.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/Feeniks/data-cache
